--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
             <h3>Custom Packages</h3>
             <p>Plan your dream vacation with our personalized travel packages.</p>
         </div>
+        <div class="service">
+            <h3>Dynamic Packages</h3>
+            <p>Plan your dream vacation with our personalized travel packages Dynamically.</p>
+        </div>
     </section>
 
     <footer>
