--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #0077b6;
+            background-color: #191970;
             color: #fff;
             padding: 15px 20px;
             text-align: center;
@@ -43,14 +43,16 @@
         }
 
         .image-banner {
-            margin-left: 150px;
-            width: 80%;
-            height: 500px;
+            width: 70%;
+            height: 60vh;
+            object-fit: cover;
+            margin: 0 auto;
+            display: block;
         }
 
         .services {
             display: flex;
-            background-color: #0077b6;
+            background-color: #4169E1;
             justify-content: space-around;
             flex-wrap: wrap;
             margin: 20px;
@@ -114,7 +116,7 @@
         </div>
         <div class="service">
             <h3>Dynamic Packages</h3>
-            <p>Plan your dream vacation with our personalized travel packages Dynamically.</p>
+            <p>Plan your dream vacation with our personalized travel dynamic packages.</p>
         </div>
     </section>
 
